--- a/config
+++ b/config
@@ -1,5 +1,9 @@
 # Read more about SSH config files: https://linux.die.net/man/5/ssh_config
 
+Host your_cluster_login_node
+    HostName your_cluster_login_node.domain.com
+    User your_username_here
+
 Host gpux
     ProxyCommand ssh your_cluster_login_node "nc $(squeue --me --name=tunnel_gpux --states=R -h -O NodeList,Comment)"
     StrictHostKeyChecking no
